--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                             </div> 
                             <div class="inputat">
                                 <div class="email">
-                                <input type="name" placeholder="Name">
+                                <input type="name" placeholder="Name" autofocus> 
                                 <input type="email" placeholder="e-mail">
                                 </div>
                                 <div class="subject">
